syntax = "proto3";

option java_package = "com.proto.hello";
option java_multiple_files = true;
option java_outer_classname = "HelloProtos";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

// service HelloWorld {
//     rpc sayHello (HelloRequest) returns (HelloResponse)
// }